tests/baselines/reference/assignmentCompatWithConstructSignatures.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(28,1): error TS2322: Type 'S2' is not assignable to type 'T'.
  Type 'S2' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(29,1): error TS2322: Type '(x: string) => void' is not assignable to type 'T'.
  Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(30,1): error TS2322: Type '(x: string) => number' is not assignable to type 'T'.
  Type '(x: string) => number' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(31,1): error TS2322: Type '(x: string) => string' is not assignable to type 'T'.
  Type '(x: string) => string' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(32,1): error TS2322: Type 'S2' is not assignable to type 'new (x: number) => void'.
  Type 'S2' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(33,1): error TS2322: Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
  Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(34,1): error TS2322: Type '(x: string) => number' is not assignable to type 'new (x: number) => void'.
  Type '(x: string) => number' provides no match for the signature 'new (x: number): void'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts(35,1): error TS2322: Type '(x: string) => string' is not assignable to type 'new (x: number) => void'.
  Type '(x: string) => string' provides no match for the signature 'new (x: number): void'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures.ts (8 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        new (x: number): void;
    }
    var t: T;
    var a: { new (x: number): void };
    
    t = a;
    a = t;
    
    interface S {
        new (x: number): string;
    }
    var s: S;
    var a2: { new (x: number): string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    interface S2 {
        (x: string): void;
    }
    var s2: S2;
    var a3: { (x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T'.
!!! error TS2322:   Type 'S2' provides no match for the signature 'new (x: number): void'.
    t = a3;
    ~
!!! error TS2322: Type '(x: string) => void' is not assignable to type 'T'.
!!! error TS2322:   Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type 'T'.
!!! error TS2322:   Type '(x: string) => number' provides no match for the signature 'new (x: number): void'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type 'T'.
!!! error TS2322:   Type '(x: string) => string' provides no match for the signature 'new (x: number): void'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:   Type 'S2' provides no match for the signature 'new (x: number): void'.
    a = a3;
    ~
!!! error TS2322: Type '(x: string) => void' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:   Type '(x: string) => void' provides no match for the signature 'new (x: number): void'.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: string) => number' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:   Type '(x: string) => number' provides no match for the signature 'new (x: number): void'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: string) => string' is not assignable to type 'new (x: number) => void'.
!!! error TS2322:   Type '(x: string) => string' provides no match for the signature 'new (x: number): void'.
    